<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background_img"
    android:gravity="bottom|right"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="right"

        >

        <Button
            android:id="@+id/startButton"
            style="@style/FirstMenuButton"
            android:text="@string/start_button"
            android:onClick="startNewGame" />

        <Button
            android:id="@+id/checkTopButton"
            style="@style/FirstMenuButton"
            android:text="@string/check_top_button"
            android:onClick="checkTop" />

        <Button
            android:id="@+id/setSettings"
            style="@style/FirstMenuButton"
            android:text="@string/settings_button"
            android:onClick="setSettings" />

    </LinearLayout>
</RelativeLayout>

