<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsMainLayout"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="50dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:gravity="center_horizontal" >

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/settings_dialog_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/add_nums_text" />
        <CheckBox
            android:id="@+id/addNumsCheckbox"
            android:theme="@style/checkBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/chosenImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:background="@color/lightColor"
        android:onClick="manageImages" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_rows_num_text"
                />

            <NumberPicker
                android:id="@+id/defaultRowsNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_cols_num_text" />
            <NumberPicker
                android:id="@+id/defaultColsNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/settingsCancelButton"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="#30000000"
            android:text="@string/settings_cancel_button" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/settingsOkButton"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="#30000000"
            android:text="@string/settings_ok_button" />
    </LinearLayout>
</LinearLayout>